[package]
name = "cssparser-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.15.0"
rand = "0.8.5"
indexmap = "2.7.0"
smallvec = "1.7.0"
criterion = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
cssparser = "0.33.0"

[profile.release]
debug = "full"

[[bench]]
name = "benchmark"
harness = false